dashboard/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "selfsigned-issuer"
  name: oauth2-proxy
spec:
  rules:
  - host: dashboard.k8s.mylab.local
    http:
      paths:
      - backend:
          serviceName: authproxy-oauth2-proxy
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - dashboard.k8s.mylab.local
    secretName: oauth2-tls
